fix: missing background in some older firefox versions

--- a/docs/.vitepress/theme/styles/landing.css
+++ b/docs/.vitepress/theme/styles/landing.css
@@ -3,7 +3,12 @@
 /* /////////////////////// */
 
 html:has(.landing) {
+  background-color: #101010;
   --vp-c-bg: #101010;
+
+  body {
+    background-color: #101010;
+  }
 }
 
 .landing {
